[gd_scene load_steps=3 format=3 uid="uid://fuxqaa0wwykc"]

[ext_resource type="Script" path="res://scripts/kill_zone.gd" id="1_uwp8w"]
[ext_resource type="AudioStream" uid="uid://h1qewvifx88g" path="res://assets/sounds/hurt.wav" id="2_4dase"]

[node name="KillZone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_uwp8w")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_4dase")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
